added a getMyStudents endpoint, updated apispec and tests
